Register_DatabaseCode,Login_DatabaseCode and Password Reset

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,24 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4F3F3"
-    tools:context=".LogIn">
+    android:background="#F4F3F3">
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="134dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
-        android:paddingLeft="10dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="68dp"
+        android:onClick="RegisterPage"
+        android:paddingLeft="4dp"
+        android:paddingTop="5dp"
         android:text="Register here"
         android:textColor="#00828F"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
@@ -29,18 +27,20 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="46dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="36dp"
-        android:paddingLeft="10dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="3dp"
+        android:gravity="center"
+        android:paddingLeft="5dp"
         android:paddingTop="5dp"
+        android:paddingRight="3dp"
         android:text="Not a member?"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="normal"
         app:fontFamily="@font/armata"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/texetButton" />
 
     <Button
         android:id="@+id/button3"
@@ -48,12 +48,14 @@
         android:layout_height="49dp"
         android:layout_marginStart="101dp"
         android:layout_marginLeft="101dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="101dp"
         android:layout_marginRight="101dp"
-        android:background="@drawable/register_button"
-        android:gravity="center"
-        android:text="Register "
+        android:background="#00828f"
+        android:onClick="Login"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:text="Login"
         android:textAllCaps="false"
         android:textColor="#f4f3f3"
         android:textSize="23sp"
@@ -74,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -84,7 +86,7 @@
             android:paddingLeft="7dp" />
 
         <EditText
-            android:id="@+id/editTextTextPassword3"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -113,5 +115,22 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/texetButton"
+        android:layout_width="156dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="29dp"
+        android:onClick="Forgot_Password"
+        android:paddingLeft="5dp"
+        android:paddingTop="2dp"
+        android:paddingRight="3dp"
+        android:text="Forgot password"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
