upload slides from database

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -60,6 +60,7 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="40dp"
             android:background="#00828f"
+            android:onClick="Send_Pass"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
             android:text="Send my password"
